# skillhub-desktop

./: .gitignore  CHANGELOG.md  README.md  TASK_PLAN.md  findings.md  index.html  package-lock.json  package.json  progress.md  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: AI_SKILL_GENERATOR.md
scripts/: release.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: installer.rs  lib.rs  main.rs  sync.rs  tools.rs
src/api/: auth.ts  playground.ts  skillhub.ts  sync.ts
src/components/: AIEnhanceToolbar.tsx  AIGenerateDialog.tsx  AIIterateEditor.tsx  BatchActionBar.tsx  ConfirmDialog.tsx  DiffViewer.tsx  FilePreview.tsx  ImportSkillsModal.tsx  KolDetail.tsx  Logo.tsx  RelatedSkills.tsx  SearchDialog.tsx  SetupWizard.tsx  SkillCard.tsx  SkillDetail.tsx  SkillPlayground.tsx  SkillsExplorer.tsx  SyncStatusBadge.tsx  Terminal.tsx  Toast.tsx  ToolIcon.tsx  ToolSelector.tsx  UpdateChecker.tsx  UserMenu.tsx  VersionHistory.tsx  WebViewModal.tsx
src/components/playground/: AssistantMessage.tsx  PlaygroundArtifactsPanel.tsx  PlaygroundHeader.tsx  PlaygroundInputBar.tsx  QuestionCard.tsx  (+6 more)
src/hooks/: useAccountCache.ts  useDependencies.ts
src/i18n/: en.json  index.ts  zh.json
src/pages/: Collections.tsx  CreateSkill.tsx  Discover.tsx  Favorites.tsx  Installed.tsx  Marketplace.tsx  MySkills.tsx  Playground.tsx  Settings.tsx  Sync.tsx
src/store/: index.ts
src/types/: index.ts
src/utils/: toolPaths.ts
(+9 files in other folders)
